--- a/public/style.css
+++ b/public/style.css
@@ -68,3 +68,13 @@ html, body {
   padding: 20px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 575px) {
+  .list-container .card {
+    height: initial; 
+    width: 75%; 
+    margin-left: auto; 
+    margin-right: auto; 
+    margin-top: 10px; 
+  }
+}
