--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,8 @@ html, body {
 
 .note-textarea {
   resize: none;
-  height: calc(100% - 63px);
+  /*height: calc(100% - 63px);*/
+  height: 100%; 
   padding-top: 15px;
 }
 
