--- a/public/style.css
+++ b/public/style.css
@@ -88,6 +88,10 @@ html, body {
   padding-right: 0px; 
 }
 
+.modal-title, .modal-body {
+  letter-spacing: 1.1px;
+}
+
 @media screen and (max-width: 575px) {
   .list-container .card {
     height: initial; 
