--- a/public/style.css
+++ b/public/style.css
@@ -92,6 +92,10 @@ html, body {
   letter-spacing: 1.1px;
 }
 
+#note-saved {
+  font-size: 2.2rem; 
+}
+
 @media screen and (max-width: 575px) {
   .list-container .card {
     height: initial; 
